# ai-sre

./: docker-compose.yml  pyproject.toml
agent/: main.py  sre_agents.py
alertmanager/: alertmanager.yml
prometheus/: HighErrorRateAlert.yml  HighLatencyAlert.yml  ServiceDownAlert.yml  alertmanager.yml  prometheus.yml
target-app/: Dockerfile  requirements.txt
target-app/app/: main.py  state.py
target-app/app/routers/: api.py  chaos.py  health.py
