[project]
name = "ai-sre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "click>=8.4.0",
    "fastapi>=0.136.1",
    "h11>=0.16.0",
    "idna>=3.15",
    "langgraph>=1.2.0",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "sniffio>=1.3.1",
    "starlette>=0.52.1",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "uvicorn>=0.47.0",
]
